# FRENDY

./: .gitignore  README  README.md
frendy/: CMakeLists.txt
frendy/include/CommonUtils/: CommentRemover.hpp  DigitAdjuster.hpp  ErrorManager.hpp  FileCommentRemover.hpp  StringUtils.hpp  TabAdjuster.hpp  TabInterpolator.hpp  TimeUtils.hpp  VectorClearer.hpp  VectorCopier.hpp  VectorSizeChecker.hpp
frendy/include/Config/: CommonData.hpp  FrendyTypes.hpp
frendy/include/DopplerBroadening/: BroadenedXSCalculator.hpp  BroadenedXSCalculatorWithNjoyFormula.hpp  DopplerCalculator.hpp  DopplerCalculatorByFrendyInput.hpp  DopplerCalculatorByNjoyInput.hpp  ThermalQuantityCalculator.hpp
frendy/include/FrendyUtils/: AceDataGeneratorInputReader.hpp  ArgumentVectorReader.hpp  DopplerBroadeningInputReader.hpp  Endf6FormatCheckInputReader.hpp  Endf6ModifierInputReader.hpp  FrendyInputCommonUtils.hpp  FrendyInputReader.hpp  GasProductionInputReader.hpp  MakeNJOYInputReader.hpp  MultiGroupDataGeneratorInputReader.hpp  NuclearDataPlotterInputReader.hpp  ProbTableInputReader.hpp  ReconResonanceInputReader.hpp  StringDataConverter.hpp  ThermalScatterInputReader.hpp  ThermalScatterMatList.hpp
frendy/include/GasProduction/: GasProductionXSCalculator.hpp  GasProductionXSCalculatorByFrendyInput.hpp  GasProductionXSCalculatorByNjoyInput.hpp
frendy/include/MathUtils/: Bootstrap.hpp  ComplexErrorFunctionCalculator.hpp  ComplexErrorFunctionCalculatorWithNjoyPurrFormula.hpp  ComplexErrorFunctionCalculatorWithNjoyReconrFormula.hpp  ComplexErrorFunctionCalculatorWithPadeApproximation.hpp  ErrorFunctionCalculatorWithPolynomialExpansion.hpp  MathUtils.hpp  RandomNumberGenerator.hpp  RandomNumberGeneratorWithNjoyFormula.hpp
frendy/include/NjoyUtils/: AcerInputReader.hpp  BroadrInputReader.hpp  GasprInputReader.hpp  GroupStructureGamma.hpp  GroupStructureNeutron.hpp  GrouprInputReader.hpp  MatxsrInputReader.hpp  ModerInputReader.hpp  MultiGroupWeightFunction.hpp  NjoyInputReader.hpp  PurrInputReader.hpp  ReconrInputReader.hpp  ThermrInputReader.hpp  UnresrInputReader.hpp
frendy/include/NuclearDataModifier/: Endf6Modifier.hpp  Endf6ModifierByFrendyInput.hpp  GendfModifier.hpp  NuclearDataModifier.hpp
frendy/include/NuclearDataProcessor/: MakeInputFromFRENDYtoNJOY.hpp  NuclearDataProcessorByFrendyInput.hpp  NuclearDataProcessorByNjoyInput.hpp  NuclearDataProcessorCommonUtils.hpp
frendy/include/NuclearDataUtils/: NuclearDataObject.hpp
frendy/include/Plotter/: PlotAceData.hpp  PlotDataByFrendyInput.hpp  PlotEndfData.hpp  PlotGendfData.hpp
frendy/include/ReconResonance/: NonResonanceEnergyGridLinearizer.hpp  ReconstructXSMerger.hpp  ResonanceEnergyGridLinearizer.hpp  ResonanceNuclearDataModifier.hpp  ResonanceXSCalculator.hpp  ResonanceXSCalculatorByInterpolation.hpp  ResonanceXSReconstructor.hpp  ResonanceXSReconstructorByFrendyInput.hpp  ResonanceXSReconstructorByNjoyInput.hpp
frendy/include/TabUtils/: IntegrateTabData.hpp  LinearizeTabData.hpp  TwoDInterpolator.hpp
frendy/include/ThermalScatter/: CoherentElasticScatterCalculator.hpp  IncoherentElasticScatterCalculator.hpp  IncoherentInelasticScatterCalculator.hpp  IncoherentInelasticScatterCalculatorByInterpolation.hpp  ThermalScatterCalculator.hpp  ThermalScatterCalculatorByFrendyInput.hpp  ThermalScatterCalculatorByNjoyInput.hpp  ThermalScatterDataConverter.hpp
frendy/include/UnresoUtils/: ProbabilityTableCalculator.hpp  ProbabilityTableCalculatorByFrendyInput.hpp  ProbabilityTableCalculatorByNjoyInput.hpp
frendy/src/CommonUtils/: CMakeLists.txt  CommentRemover.cpp  DigitAdjuster.cpp  ErrorManager.cpp  FileCommentRemover.cpp  StringUtils.cpp  TabAdjuster.cpp  TabInterpolator.cpp  TimeUtils.cpp  VectorClearer.cpp  VectorCopier.cpp  VectorSizeChecker.cpp
frendy/src/Config/: CMakeLists.txt
frendy/src/ContinuousEnergyXSUtils/: CMakeLists.txt
frendy/src/DopplerBroadening/: BroadenedXSCalculator.cpp  BroadenedXSCalculatorWithNjoyFormula.cpp  CMakeLists.txt  DopplerCalculator.cpp  DopplerCalculatorByFrendyInput.cpp  DopplerCalculatorByNjoyInput.cpp  ThermalQuantityCalculator.cpp
frendy/src/EndfUtils/: CMakeLists.txt
frendy/src/FrendyUtils/: AceDataGeneratorInputReader.cpp  ArgumentVectorReader.cpp  CMakeLists.txt  DopplerBroadeningInputReader.cpp  Endf6FormatCheckInputReader.cpp  Endf6ModifierInputReader.cpp  FrendyInputCommonUtils.cpp  FrendyInputReader.cpp  GasProductionInputReader.cpp  MakeNJOYInputReader.cpp  MultiGroupDataGeneratorInputReader.cpp  NuclearDataPlotterInputReader.cpp  ProbTableInputReader.cpp  ReconResonanceInputReader.cpp  StringDataConverter.cpp  ThermalScatterInputReader.cpp  ThermalScatterMatList.cpp
frendy/src/GasProduction/: CMakeLists.txt  GasProductionXSCalculator.cpp  GasProductionXSCalculatorByFrendyInput.cpp  GasProductionXSCalculatorByNjoyInput.cpp
frendy/src/MGXSUtils/: CMakeLists.txt
frendy/src/MathUtils/: Bootstrap.cpp  CMakeLists.txt  ComplexErrorFunctionCalculator.cpp  ComplexErrorFunctionCalculatorWithNjoyPurrFormula.cpp  ComplexErrorFunctionCalculatorWithNjoyReconrFormula.cpp  ComplexErrorFunctionCalculatorWithPadeApproximation.cpp  ErrorFunctionCalculatorWithPolynomialExpansion.cpp  MathUtils.cpp  RandomNumberGenerator.cpp  RandomNumberGeneratorWithNjoyFormula.cpp
frendy/src/NjoyUtils/: AcerInputReader.cpp  BroadrInputReader.cpp  CMakeLists.txt  GasprInputReader.cpp  GroupStructureGamma.cpp  GroupStructureNeutron.cpp  GrouprInputReader.cpp  MatxsrInputReader.cpp  ModerInputReader.cpp  MultiGroupWeightFunction.cpp  NjoyInputReader.cpp  PurrInputReader.cpp  ReconrInputReader.cpp  ThermrInputReader.cpp  UnresrInputReader.cpp
frendy/src/NuclearDataModifier/: CMakeLists.txt  Endf6Modifier.cpp  Endf6ModifierByFrendyInput.cpp  GendfModifier.cpp  NuclearDataModifier.cpp
frendy/src/NuclearDataProcessor/: CMakeLists.txt  MakeInputFromFRENDYtoNJOY.cpp  NuclearDataProcessorByFrendyInput.cpp  NuclearDataProcessorByNjoyInput.cpp  NuclearDataProcessorCommonUtils.cpp
frendy/src/NuclearDataUtils/: CMakeLists.txt  NuclearDataObject.cpp
frendy/src/Plotter/: CMakeLists.txt  PlotAceData.cpp  (+3 more)
(+643 files in other folders)
