# CMakeLists.txt for EndfUtils

# Set a common include directory
include_directories(${CMAKE_CURRENT_SOURCE_DIR})

# Create a single library with all sources from the EndfUtils submodules
add_library(EndfUtils
    Endf6Writer/Endf6Writer.cpp
    EndfFileReader/EndfFileReader.cpp
    EndfFileReader/StringConverter.cpp
    EndfFileReader/MultiParser.cpp
    GendfParser/GMF13Parser.cpp
    GendfParser/GMF06Parser.cpp
    GendfParser/GMF05Parser.cpp
    GendfParser/GendfCompare.cpp
    GendfParser/GMF01MT451Parser.cpp
    GendfParser/GMFxxParserBase.cpp
    GendfParser/GMF03Parser.cpp
    GendfParser/GendfParser.cpp
    GendfParser/GMF16Parser.cpp
    GendfParser/GendfTapeDivider.cpp
    MFxxMTyyyConverter/MF27Converter.cpp
    MFxxMTyyyConverter/MF01MT458Converter.cpp
    MFxxMTyyyConverter/MF30MT002Converter.cpp
    MFxxMTyyyConverter/MF07MT002Converter.cpp
    MFxxMTyyyConverter/MF09Converter.cpp
    MFxxMTyyyConverter/MF08MT459Converter.cpp
    MFxxMTyyyConverter/MF08MT454Converter.cpp
    MFxxMTyyyConverter/MF08Converter.cpp
    MFxxMTyyyConverter/MF33Converter.cpp
    MFxxMTyyyConverter/MF01MT460Converter.cpp
    MFxxMTyyyConverter/MF03Converter.cpp
    MFxxMTyyyConverter/MF23Converter.cpp
    MFxxMTyyyConverter/MF07MT004Converter.cpp
    MFxxMTyyyConverter/MF14Converter.cpp
    MFxxMTyyyConverter/MF40Converter.cpp
    MFxxMTyyyConverter/MF04Converter.cpp
    MFxxMTyyyConverter/MF02MT151Converter.cpp
    MFxxMTyyyConverter/MF08MT457Converter.cpp
    MFxxMTyyyConverter/MF01MT456Converter.cpp
    MFxxMTyyyConverter/MF01MT451Converter.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterCompatibleResolvedResonance.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterReichMooreCompact.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterUnresolvedResonance.cpp
    MFxxMTyyyConverter/ResonanceData/MF02MT151ConverterReichMoore.cpp
    MFxxMTyyyConverter/ResonanceData/MF02MT151ConverterBreitWigner.cpp
    MFxxMTyyyConverter/ResonanceData/MF02MT151ConverterRMatrixLimited.cpp
    MFxxMTyyyConverter/ResonanceData/MF02MT151ConverterUnresolved.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterBreitWignerCompact.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterRMatrixLimitedCompact.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterReichMoore.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterRMatrixLimited.cpp
    MFxxMTyyyConverter/ResonanceData/MF02MT151ConverterAdlerAdler.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterAdlerAdler.cpp
    MFxxMTyyyConverter/ResonanceData/MF32MT151ConverterBreitWigner.cpp
    MFxxMTyyyConverter/MF30MT001Converter.cpp
    MFxxMTyyyConverter/MF01MT455Converter.cpp
    MFxxMTyyyConverter/MF02MT152Converter.cpp
    MFxxMTyyyConverter/MF34Converter.cpp
    MFxxMTyyyConverter/MF26Converter.cpp
    MFxxMTyyyConverter/MF32MT151Converter.cpp
    MFxxMTyyyConverter/MF13Converter.cpp
    MFxxMTyyyConverter/MF28Converter.cpp
    MFxxMTyyyConverter/MF05Converter.cpp
    MFxxMTyyyConverter/MF35Converter.cpp
    MFxxMTyyyConverter/MF01MT452Converter.cpp
    MFxxMTyyyConverter/MF10Converter.cpp
    MFxxMTyyyConverter/MF12Converter.cpp
    MFxxMTyyyConverter/MF31Converter.cpp
    MFxxMTyyyConverter/MF06Converter.cpp
    MFxxMTyyyConverter/MF15Converter.cpp
    MFxxMTyyyConverter/MF02MT153Converter.cpp
    MFxxMTyyyWriter/MF02MT153Writer.cpp
    MFxxMTyyyWriter/MF26Writer.cpp
    MFxxMTyyyWriter/MF35Writer.cpp
    MFxxMTyyyWriter/MF13Writer.cpp
    MFxxMTyyyWriter/MF02MT152Writer.cpp
    MFxxMTyyyWriter/MF28Writer.cpp
    MFxxMTyyyWriter/MF33Writer.cpp
    MFxxMTyyyWriter/MF01MT455Writer.cpp
    MFxxMTyyyWriter/MF08MT459Writer.cpp
    MFxxMTyyyWriter/MF32MT151Writer.cpp
    MFxxMTyyyWriter/MF10Writer.cpp
    MFxxMTyyyWriter/MF02MT151Writer.cpp
    MFxxMTyyyWriter/MF15Writer.cpp
    MFxxMTyyyWriter/MF31Writer.cpp
    MFxxMTyyyWriter/MF12Writer.cpp
    MFxxMTyyyWriter/MF30MT002Writer.cpp
    MFxxMTyyyWriter/MF08Writer.cpp
    MFxxMTyyyWriter/MF27Writer.cpp
    MFxxMTyyyWriter/MF07MT004Writer.cpp
    MFxxMTyyyWriter/MF08MT457Writer.cpp
    MFxxMTyyyWriter/MF07MT002Writer.cpp
    MFxxMTyyyWriter/MF14Writer.cpp
    MFxxMTyyyWriter/MF01MT452Writer.cpp
    MFxxMTyyyWriter/MF01MT460Writer.cpp
    MFxxMTyyyWriter/MF23Writer.cpp
    MFxxMTyyyWriter/MF06Writer.cpp
    MFxxMTyyyWriter/MF34Writer.cpp
    MFxxMTyyyWriter/MF05Writer.cpp
    MFxxMTyyyWriter/MF01MT456Writer.cpp
    MFxxMTyyyWriter/MF03Writer.cpp
    MFxxMTyyyWriter/MF01MT458Writer.cpp
    MFxxMTyyyWriter/MF04Writer.cpp
    MFxxMTyyyWriter/MF30MT001Writer.cpp
    MFxxMTyyyWriter/MF01MT451Writer.cpp
    MFxxMTyyyWriter/MF40Writer.cpp
    MFxxMTyyyWriter/MF09Writer.cpp
    MFxxMTyyyWriter/MF08MT454Writer.cpp
    Endf6Converter/Endf6Converter.cpp
    Endf6Parser/Endf6ParserCov.cpp
    Endf6Parser/Endf6Parser.cpp
    Endf6Parser/Endf6ParserNoCov.cpp
    GendfWriter/GMF01MT451Writer.cpp
    GendfWriter/GMF03Writer.cpp
    GendfWriter/GendfWriter.cpp
    GendfWriter/GMF13Writer.cpp
    GendfWriter/GMF06Writer.cpp
    GendfWriter/GMFxxWriterBase.cpp
    GendfWriter/GMF05Writer.cpp
    GendfWriter/GMF16Writer.cpp
    MFxxMTyyyParser/MF12Parser.cpp
    MFxxMTyyyParser/MF02MT152Parser.cpp
    MFxxMTyyyParser/MF31Parser.cpp
    MFxxMTyyyParser/MF01MT458Parser.cpp
    MFxxMTyyyParser/MF01MT456Parser.cpp
    MFxxMTyyyParser/MF10Parser.cpp
    MFxxMTyyyParser/MF08MT459Parser.cpp
    MFxxMTyyyParser/MF13Parser.cpp
    MFxxMTyyyParser/MF33Parser.cpp
    MFxxMTyyyParser/MF40Parser.cpp
    MFxxMTyyyParser/MF34Parser.cpp
    MFxxMTyyyParser/MF27Parser.cpp
    MFxxMTyyyParser/MF07MT004Parser.cpp
    MFxxMTyyyParser/MF01MT460Parser.cpp
    MFxxMTyyyParser/MF09Parser.cpp
    MFxxMTyyyParser/MF06Parser.cpp
    MFxxMTyyyParser/MF14Parser.cpp
    MFxxMTyyyParser/MF02MT153Parser.cpp
    MFxxMTyyyParser/MF01MT451Parser.cpp
    MFxxMTyyyParser/MF32MT151Parser.cpp
    MFxxMTyyyParser/MF04Parser.cpp
    MFxxMTyyyParser/MF23Parser.cpp
    MFxxMTyyyParser/MF30MT002Parser.cpp
    MFxxMTyyyParser/MF08MT454Parser.cpp
    MFxxMTyyyParser/MF05Parser.cpp
    MFxxMTyyyParser/MF02MT151Parser.cpp
    MFxxMTyyyParser/MF28Parser.cpp
    MFxxMTyyyParser/MF30MT001Parser.cpp
    MFxxMTyyyParser/MF08Parser.cpp
    MFxxMTyyyParser/MF01MT455Parser.cpp
    MFxxMTyyyParser/MF15Parser.cpp
    MFxxMTyyyParser/MF03Parser.cpp
    MFxxMTyyyParser/MF08MT457Parser.cpp
    MFxxMTyyyParser/MF01MT452Parser.cpp
    MFxxMTyyyParser/MF35Parser.cpp
    MFxxMTyyyParser/MF07MT002Parser.cpp
    MFxxMTyyyParser/MF26Parser.cpp
    EndfFileWriter/EndfFileWriter.cpp
    OtherUtils/EndfTapeDivider.cpp
)

target_include_directories(EndfUtils PUBLIC ${CMAKE_SOURCE_DIR}/include)

# Optionally, link any external dependencies if needed for endf_utils
# target_link_libraries(endf_utils PRIVATE <other_libraries>)
target_link_libraries(EndfUtils PUBLIC
    CommonUtils
    Config
    ContinuousEnergyXSUtils
    MathUtils
    NuclearDataUtils
    TabUtils
)
